--- a/src/css/style.css
+++ b/src/css/style.css
@@ -153,6 +153,7 @@ button {
 
 .card__name {
   font-size: 1em;
+  margin-left: 20px;
 }
 /* End product list card */
 
@@ -169,10 +170,12 @@ button {
 /* Start cart list card styles */
 .cart-card {
   display: grid;
-  grid-template-columns: 25% auto 15%;
+  grid-template-columns: 25% auto 15% 15%;
   font-size: var(--small-font);
   /* max-height: 120px; */
   align-items: center;
+  width: 100%;
+  position: relative;
 }
 
 .cart-card__image {
@@ -190,11 +193,25 @@ button {
 .cart-card__color {
   grid-row: 2;
   grid-column: 2;
+  margin-left: 20px;
 }
 
 .cart-card__quantity {
   grid-row: 1;
   grid-column: 3;
+}
+
+.cart-card__remove {
+  margin: 5px;
+  padding: 5px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: 1px solid black;
+}
+
+.cart-card__remove:hover {
+  cursor: pointer;
 }
 
 .cart-card__price {
