--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,6 +30,7 @@ header {
   justify-content: space-between;
   padding: 0 10px;
 }
+
 .logo {
   line-height: 60px;
   width: 245px;
@@ -190,6 +191,7 @@ button {
 
 .card__name {
   font-size: 1em;
+  margin-left: 20px;
 }
 /* End product list card */
 
@@ -206,15 +208,18 @@ button {
 /* Start cart list card styles */
 .cart-card {
   display: grid;
-  grid-template-columns: 25% auto 15%;
+  grid-template-columns: 25% auto 15% 15%;
   font-size: var(--small-font);
   /* max-height: 120px; */
   align-items: center;
+  width: 100%;
+  position: relative;
 }
 
 .cart-card__image {
   grid-row: 1/3;
   grid-column: 1;
+  margin-left: 20px;
 }
 .cart-card p {
   margin-top: 0;
@@ -232,6 +237,19 @@ button {
 .cart-card__quantity {
   grid-row: 1;
   grid-column: 3;
+}
+
+.cart-card__remove {
+  margin: 5px;
+  padding: 5px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: 1px solid black;
+}
+
+.cart-card__remove:hover {
+  cursor: pointer;
 }
 
 .cart-card__price {
