Adds announcement alert to listing product index

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,23 +13,28 @@
   --small-font: 0.8em;
   --large-font: 1.2em;
 }
+
 * {
   box-sizing: border-box;
 }
+
 body {
   margin: 0;
   font-family: var(--font-body);
   font-size: var(--font-base);
   color: var(--dark-grey);
 }
+
 img {
   max-width: 100%;
 }
+
 header {
   display: flex;
   justify-content: space-between;
   padding: 0 10px;
 }
+
 .logo {
   line-height: 60px;
   width: 245px;
@@ -39,23 +44,28 @@ header {
   text-align: right;
   font-family: var(--font-headline);
 }
+
 .logo img {
   width: 60px;
   height: 60px;
 }
+
 .logo a {
   text-decoration: none;
   color: var(--font-body);
 }
+
 .hero {
   position: relative;
 }
+
 .hero .logo {
   position: absolute;
   left: calc(50% - 60px);
   bottom: -10px;
   background-color: white;
 }
+
 .logo--square {
   font-size: var(--small-font);
   width: 110px;
@@ -68,14 +78,17 @@ header {
   align-items: center;
   line-height: 1;
 }
+
 .logo--square img {
   width: 90px;
   height: 90px;
   margin-top: -1.3em;
 }
-.logo--square > div {
+
+.logo--square>div {
   margin-top: -1.7em;
 }
+
 /* utility classes */
 .highlight {
   color: var(--tertiary-color);
@@ -91,12 +104,15 @@ button {
   font-size: var(--large-font);
   cursor: pointer;
 }
+
 .divider {
   border-bottom: 2px solid var(--primary-color);
 }
+
 .title {
   text-transform: capitalize;
 }
+
 /* End utility classes */
 
 /* Cart icon styles */
@@ -104,13 +120,31 @@ button {
   padding-top: 1em;
   position: relative;
   text-align: center;
+  display: inline-block;
 }
 
 .cart svg {
   width: 25px;
+  position: relative;
 }
+
 .cart:hover svg {
   fill: gray;
+}
+
+.cart svg a {
+  position: relative;
+}
+
+.cart-badge {
+  position: absolute;
+  top: 5px;
+  right: 0;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 0.2em 0.2em;
+  font-size: small;
 }
 
 /* End cart icon styles */
@@ -126,24 +160,28 @@ button {
   padding-left: 0;
 }
 
-.product-grid > li {
+.product-grid>li {
   width: 150px;
   /* border: 1px solid var(--light-grey); */
   padding: 0.5em;
   margin: 1em;
 }
+
 .product-grid h2 {
   margin: 0;
 
   font-size: 1.2em;
 }
+
 .product-grid a {
   text-decoration: none;
 }
+
 .product-grid a:link,
 .product-grid a:visited {
   color: var(--dark-grey);
 }
+
 .product-grid a:hover {
   text-decoration: underline;
 }
@@ -155,9 +193,11 @@ button {
   max-width: 600px;
   margin: auto;
 }
+
 .products {
   padding: 0.5em;
 }
+
 .product-list {
   display: flex;
   flex-flow: row wrap;
@@ -165,10 +205,12 @@ button {
   list-style-type: none;
   padding: 0;
 }
+
 .product-list a {
   text-decoration: none;
   color: var(--dark-grey);
 }
+
 /* Styles for product lists */
 .product-card {
   flex: 1 1 45%;
@@ -178,6 +220,7 @@ button {
   max-width: 250px;
   text-align: center;
 }
+
 .product-card h2,
 .product-card h3,
 .product-card p {
@@ -191,6 +234,7 @@ button {
 .card__name {
   font-size: 1em;
 }
+
 /* End product list card */
 
 .product-detail {
@@ -216,9 +260,11 @@ button {
   grid-row: 1/3;
   grid-column: 1;
 }
+
 .cart-card p {
   margin-top: 0;
 }
+
 .cart-card .card__name {
   grid-row: 1;
   grid-column: 2;
@@ -244,9 +290,11 @@ button {
     max-width: 1080px;
     margin: auto;
   }
+
   .mission {
     font-size: 1.2em;
   }
+
   .cart-card {
     font-size: inherit;
     grid-template-columns: 150px auto 15%;
