--- a/src/css/style.css
+++ b/src/css/style.css
@@ -353,6 +353,20 @@ button {
   display: none;
 }
 
+.error-message {
+  color: red;
+  text-align: center;
+  background-color: white;
+  padding: 10px;
+}
+
+.success-message {
+  color: green;
+  text-align: center;
+  background-color: white;
+  padding: 10px;
+}
+
 @media screen and (min-width: 500px) {
   body {
     max-width: 1080px;
