--- a/src/css/style.css
+++ b/src/css/style.css
@@ -353,18 +353,17 @@ button {
   display: none;
 }
 
-.error-message {
-  color: red;
-  text-align: center;
-  background-color: white;
-  padding: 10px;
+/* alert styles */
+.alert {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5em;
+  background-color: var(--primary-color);
+  border: 1px solid rgb(188, 83, 30);
 }
-
-.success-message {
-  color: green;
-  text-align: center;
-  background-color: white;
-  padding: 10px;
+.alert > p {
+  margin: 0;
 }
 
 @media screen and (min-width: 500px) {
