--- a/src/css/style.css
+++ b/src/css/style.css
@@ -366,6 +366,20 @@ button {
   margin: 0;
 }
 
+.breadcrumb {
+  font-size: 14px;
+  margin: 10px 0;
+}
+
+.breadcrumb a {
+  text-decoration: none;
+  color: #007bff;
+}
+
+.breadcrumb a:hover {
+  text-decoration: underline;
+}
+
 @media screen and (min-width: 500px) {
   body {
     max-width: 1080px;
