--- a/src/css/style.css
+++ b/src/css/style.css
@@ -367,8 +367,9 @@ button {
 }
 
 .breadcrumb {
-  font-size: 14px;
+  font-size: 16px;
   margin: 10px 0;
+  margin-left: 12px;
 }
 
 .breadcrumb a {
