--- a/src/css/style.css
+++ b/src/css/style.css
@@ -381,6 +381,10 @@ button {
   text-decoration: underline;
 }
 
+.categoryLink {
+  text-transform: capitalize;
+}
+
 @media screen and (min-width: 500px) {
   body {
     max-width: 1080px;
