--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -1,6 +1,6 @@
 <header>
   <div class="logo">
-    <img src="images/logo.png" alt="Your Logo">
+    <img src="/images/logo.png" alt="Your Logo">
   </div>
   <nav>
     <ul>
