--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,12 +1,12 @@
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  font-family: "Roboto", sans-serif;
+  background-color: #ecf0f1;
   margin: 0;
   padding: 0;
 }
 
 header {
-  background-color: #333;
+  background-color: #3498db;
   color: #fff;
   padding: 10px 20px;
   display: flex;
@@ -15,7 +15,7 @@ header {
 }
 
 .logo img {
-  height: 50px; /* Adjust the height as needed */
+  height: 50px; 
 }
 
 nav ul {
@@ -33,7 +33,7 @@ nav a {
 }
 
 .container {
-  max-width: 800px; /* Adjust the max-width as needed */
+  max-width: 800px; 
   margin: 50px auto;
   padding: 20px;
   background-color: #fff;
@@ -47,15 +47,15 @@ label {
 }
 
 input {
-  box-sizing: border-box; /* Include padding and border in the element's total width and height */
-  width: calc(100% - 20px); /* Subtract the total left and right padding from 100% */
+  box-sizing: border-box;
+  width: calc(100% - 20px); 
   padding: 10px;
   margin-bottom: 20px;
 }
 
 button {
   padding: 10px;
-  background-color: #4caf50;
+  background-color: #2ecc71;
   color: #fff;
   border: none;
   cursor: pointer;
@@ -91,4 +91,25 @@ th {
 
 tr:nth-child(even) {
   background-color: #f9f9f9;
+}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+footer p {
+  margin: 0;
+}
+
+/* Responsive styles for the footer */
+@media only screen and (max-width: 600px) {
+  footer {
+    padding: 10px;
+  }
 }
